--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Endouble-api",
+    "name": "mnsami/endouble-api",
     "license": "MIT",
     "type": "project",
     "authors": [
@@ -19,7 +19,7 @@
         "files": [ "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php" ]
     },
     "require": {
-        "php": ">=5.5.9",
+        "php": ">=7.3",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
@@ -52,8 +52,9 @@
         ]
     },
     "config": {
+        "bin-dir": "bin",
         "platform": {
-            "php": "5.6"
+            "php": "7.3"
         },
         "sort-packages": true
     },
