--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,9 +1,9 @@
-FROM php:7-alpine
+FROM php:7-fpm-alpine
 
 MAINTAINER Mina Sami <mina.nsami@gmail.com>
 
 RUN apk update \
-    && apk add git curl vim wget bash acl
+    && apk add git curl vim wget bash
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -15,7 +15,4 @@ RUN ln -snf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime && echo ${TIMEZONE} >
 RUN printf '[PHP]\ndate.timezone = "%s"\n', ${TIMEZONE} > /usr/local/etc/php/conf.d/tzone.ini
 RUN "date"
 
-# set right permissions for symfony cache
-RUN HTTPDUSER=$(ps axo user,comm | grep -E '[a]pache|[h]ttpd|[_]www|[w]ww-data|[n]ginx' | grep -v root | head -1 | cut -d\  -f1)
-RUN setfacl -dR -m u:"$HTTPDUSER":rwX -m u:$(whoami):rwX var
-RUN setfacl -R -m u:"$HTTPDUSER":rwX -m u:$(whoami):rwX var
+
