--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,7 @@ services:
     container_name: endouble-php-fpm
     tty: true
     restart: on-failure
-    ports:
-      - "9000:9000"
+    working_dir: /var/www/api
     volumes:
       - ./:/var/www/api
       - ./logs/api/logs/:/var/www/api/app/logs:cached
