--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,10 @@
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
     },
     "autoload-dev": {
-        "psr-4": { "Tests\\": "tests/" },
+        "psr-4": {
+            "Tests\\": "tests/",
+            "Endouble\\UnitTests\\": "./tests/unit"
+        },
         "files": [ "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php" ]
     },
     "require": {
@@ -34,6 +37,7 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "^8.2",
         "sensio/generator-bundle": "^3.0",
         "squizlabs/php_codesniffer": "^3.4",
         "symfony/phpunit-bridge": "^3.0"
