comic table doctrine mapping

--- a/src/Endouble/Spacex/Infrastructure/Persistence/Doctrine/Mapping/Endouble.Spacex.Domain.Model.Launch.Launch.dcm.yml
+++ b/src/Endouble/Spacex/Infrastructure/Persistence/Doctrine/Mapping/Endouble.Spacex.Domain.Model.Launch.Launch.dcm.yml
@@ -18,7 +18,7 @@ Endouble\Spacex\Domain\Model\Launch\Launch:
       column: details
     launchDate:
       type: datetime
-      column: launch_date
+      column: launched_at_date
     missionName:
       type: MissionName
       column: mission_name
