--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -29,6 +29,9 @@ services:
         public: true
         tags: ['controller.service_arguments']
 
+    Endouble\Engine\:
+        resource: '../../src/Endouble/Engine/*'
+
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
     #     arguments:
