Add doctrine types

--- a/src/Endouble/Engine/Infrastructure/Persistence/Doctrine/Mapping/Endouble.Engine.Domain.Model.Item.Item.dcm.yml
+++ b/src/Endouble/Engine/Infrastructure/Persistence/Doctrine/Mapping/Endouble.Engine.Domain.Model.Item.Item.dcm.yml
@@ -20,5 +20,5 @@ Endouble\Engine\Domain\Model\Item\Item:
       type: datetime
       column: date
     source:
-      type: DataSource
+      type: Source
       column: source
