--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,17 @@
 version: "3.1"
 
 services:
+  mysql:
+    image: mysql:5.7
+    container_name: endouble-db
+    tty: true
+    env_file:
+      - .env
+    volumes:
+      - dbdata:/var/lib/mysql/
+    ports:
+      - "3306:3306"
+
   webserver:
     build: docker/nginx/
     container_name: endouble-nginx
@@ -13,6 +24,7 @@ services:
       - ./logs/nginx/:/var/log/nginx:cached
       - ./docker/nginx/endoubleapi.conf:/etc/nginx/conf.d/default.conf
     links:
+      - mysql
       - php-fpm
 
   php-fpm:
@@ -21,6 +33,13 @@ services:
     tty: true
     restart: on-failure
     working_dir: /var/www/api
+    links:
+      - mysql
     volumes:
       - ./:/var/www/api
       - ./logs/api/logs/:/var/www/api/app/logs:cached
+
+#Volumes
+volumes:
+  dbdata:
+    driver: local
