--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -3,11 +3,12 @@ FROM php:7-fpm-alpine
 MAINTAINER Mina Sami <mina.nsami@gmail.com>
 
 RUN apk update \
-    && apk add git curl vim wget bash
+    && apk add git curl vim wget bash mysql-client
 
 RUN apk add --no-cache $PHPIZE_DEPS \
     && pecl install xdebug \
-    && docker-php-ext-enable xdebug \
+    && docker-php-ext-install mysqli pdo pdo_mysql \
+    && docker-php-ext-enable xdebug mysqli \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Composer
