--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -51,8 +51,8 @@ services:
         factory: ['@doctrine.orm.default_entity_manager', getRepository]
         arguments: ['Endouble\Engine\Domain\Model\Item\Item']
 
-    endouble.application.get_all_past_launches:
-        class: Endouble\Engine\Application\GetAllPastLaunches\GetAllPastLaunchesCommandHandler
+    endouble.application.get_all_spacex_past_launches:
+        class: Endouble\Engine\Application\CreateItemsFromPastLaunches\CreateItemsFromPastLaunchesCommandHandler
         public: true
         arguments:
             $itemService: '@endouble.item.translating.service'
