--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,6 @@
 version: "3.1"
 
 services:
-  mysql:
-    image: mysql:5.7
-    container_name: endouble-db
-    tty: true
-    env_file:
-      - .env
-    volumes:
-      - dbdata:/var/lib/mysql/
-    ports:
-      - "3306:3306"
 
   webserver:
     build: docker/nginx/
@@ -24,16 +14,14 @@ services:
       - ./logs/nginx/:/var/log/nginx:cached
       - ./docker/nginx/endoubleapi.conf:/etc/nginx/conf.d/default.conf:cached
     links:
-      - mysql
       - php-fpm
+      - memcached
 
   memcached:
     image: memcached:alpine
     container_name: endouble-memcached
     restart: on-failure
     tty: true
-    links:
-      - php-fpm
 
   php-fpm:
     build: docker/php/
@@ -42,7 +30,7 @@ services:
     restart: on-failure
     working_dir: /var/www/api
     links:
-      - mysql
+      - memcached
     volumes:
       - ./:/var/www/api
 
