--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,10 @@
         "php": ">=7.3",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
+        "friendsofsymfony/rest-bundle": "^2.5",
         "guzzlehttp/guzzle": "^6.3",
         "incenteev/composer-parameter-handler": "^2.0",
+        "justinrainbow/json-schema": "^5.2",
         "ramsey/uuid": "^3.8",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^5.0.0",
