--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "AppBundle\\": "src/AppBundle",
+            "ApiBundle\\": "src/ApiBundle",
             "Endouble\\": "src/Endouble"
         },
         "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
