--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -30,15 +30,15 @@ services:
         arguments:
             $client: '@guzzle.client'
 
-    endouble.application.create_items_from_all_spacex_past_launches:
-        class: Endouble\Engine\Application\CreateItemsFromPastLaunches\CreateItemsFromPastLaunchesCommandHandler
+    endouble.application.get_items_from_space_launches:
+        class: Endouble\Engine\Application\GetItemsFromSpaceLaunches\GetItemsFromSpaceLaunchesCommandHandler
         public: true
         arguments:
             $itemService: '@endouble.item.translating.service'
             $cacheItemPool: '@app.cache.items'
 
-    endouble.application.create_items_from_all_xkcd_comics:
-        class: Endouble\Engine\Application\CreateItemsFromAllXkcdComics\CreateItemsFromAllXkcdComicsCommandHandler
+    endouble.application.get_items_from_comics:
+        class: Endouble\Engine\Application\GetItemsFromComics\GetItemsFromComicsCommandHandler
         public: true
         arguments:
             $itemService: '@endouble.item.translating.service'
