Use Client. Update README.md

--- a/src/ApiBundle/Resources/config/routing.yml
+++ b/src/ApiBundle/Resources/config/routing.yml
@@ -2,3 +2,8 @@ items:
     type: rest
     defaults: {_format: json}
     resource: ApiBundle\Controller\ItemController
+
+healthcheck:
+    type: rest
+    defaults: {_format: json}
+    resource: ApiBundle\Controller\HealthCheckController
